HFP-3548 Prevent overlap when adjusting

--- a/styles/h5p-tooltip.css
+++ b/styles/h5p-tooltip.css
@@ -65,27 +65,3 @@
 .h5p-tooltip-visible {
   display: block;
 }
-
-.h5p-tooltip-adjusted-left {
-  --translateX: 0;
-  left: auto;
-  right: 0;
-}
-
-.h5p-tooltip-adjusted-right {
-  --translateX: 0;
-  left: 0;
-  right: auto;
-}
-
-.h5p-tooltip-adjusted-up {
-  --translateY: 0;
-  bottom: 0;
-  top: auto;
-}
-
-.h5p-tooltip-adjusted-down {
-  --translateY: 0;
-  top: 0;
-  bottom: auto;
-}
